--- a/infra/values.yaml
+++ b/infra/values.yaml
@@ -69,6 +69,12 @@ istio:
       #   cpu: 500m
       #   memory: 2048Mi
 
+gpu:
+  nvidia:
+    # todo: tolerations, affinity
+    devicePluginImage: nvidia/k8s-device-plugin:v0.11.0-ubuntu20.04
+    dcgmExporterImage: nvidia/dcgm-exporter:3.1.7-3.1.4-ubuntu20.04
+
 cube:
   namespace: infra
   backend:
