--- a/infra/templates/cube/deploy-backend.yaml
+++ b/infra/templates/cube/deploy-backend.yaml
@@ -16,6 +16,18 @@ spec:
       labels:
         app: kubeflow-dashboard
     spec:
+      {{- if .Values.mysql.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.mysql.nodeSelector | indent 8 }}
+      {{- end }}
+      {{- if .Values.mysql.tolerations }}
+      tolerations:
+{{ toYaml .Values.mysql.tolerations | indent 8 }}
+      {{- end }}
+      {{- if .Values.mysql.affinity }}
+      affinity:
+{{ toYaml .Values.mysql.affinity | indent 8 }}
+      {{- end }}
       {{- with .Values.cube.imagePullSecrets | default .Values.global.imagePullSecrets }}
       imagePullSecrets:
 {{- toYaml . | nindent 8 }}
@@ -31,7 +43,6 @@ spec:
               configMapKeyRef:
                 name: deploy-config
                 key: STAGE
-
           - name: REDIS_HOST
             valueFrom:
               configMapKeyRef:
