--- a/infra/templates/gpu/nvidia-device-plugin.yml
+++ b/infra/templates/gpu/nvidia-device-plugin.yml
@@ -1,3 +1,5 @@
+{{ if .Values.gpu.nvidia.enable }}
+
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -59,3 +61,5 @@ spec:
         - name: device-plugin
           hostPath:
             path: /var/lib/kubelet/device-plugins
+
+{{- end }}
