--- a/infra/templates/cube/deploy-schedule.yaml
+++ b/infra/templates/cube/deploy-schedule.yaml
@@ -35,7 +35,7 @@ spec:
       {{- end }}
       containers:
         - name: kubeflow-dashboard-schedule
-          image: "{{ .Values.global.imageRegistry }}/{{ .Values.cube.backendImage }}"
+          image: {{ .Values.cube.backendImage }}
           imagePullPolicy: {{ .Values.cube.imagePullPolicy }}
           command: ["bash","-c",'celery --app=myapp.tasks.celery_app:celery_app beat --loglevel=info']
           env:
