--- a/infra/templates/cube/deploy-watch.yaml
+++ b/infra/templates/cube/deploy-watch.yaml
@@ -35,7 +35,7 @@ spec:
       {{- end }}
       containers:
         - name: kubeflow-watch-workflow
-          image: "{{ .Values.global.imageRegistry }}/{{ .Values.cube.backendImage }}"
+          image: {{ .Values.cube.backendImage }}
           imagePullPolicy: {{ .Values.cube.imagePullPolicy }}
           workingDir: /home/myapp
           command: ["supervisord", "-c", "/home/myapp/myapp/tools/supervisord.conf"]
