--- a/infra/templates/mysql/deployment.yaml
+++ b/infra/templates/mysql/deployment.yaml
@@ -40,7 +40,7 @@ spec:
       {{- end }}
       containers:
         - name: mysql
-          image: "{{ .Values.global.imageRegistry }}/{{ .Values.mysql.image }}"
+          image: {{ .Values.mysql.image }}
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: data
